@@ -26,4 +26,31 @@
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
+	
+	
+		<build>
+		<pluginManagement>
+
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.11.0</version>
+					<configuration>
+						<source>18</source>
+						<target>18</target>
+						<verbose>true</verbose>
+						<compilerArgs>
+							                    <arg>--add-exports</arg>
+							   <arg>domain/domain=integrationTesting</arg>
+                
+ 					 
+						</compilerArgs>
+
+					</configuration>
+				</plugin>
+					</plugins>
+		</pluginManagement>
+
+	</build>
 </project>
